unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Visibility_Rule__c.field-meta.xml
<CustomField>
    <fullName>conference360__Visibility_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dictates whether or not the attendee can view this event item.</description>
    <inlineHelpText>Dictates whether or not the attendee can view this event item.</inlineHelpText>
    <label>Visibility Rule</label>
    <referenceTo>bt_base__Rule__c</referenceTo>
    <relationshipLabel>Event Items</relationshipLabel>
    <relationshipName>Event_Items</relationshipName>
    <type>Lookup</type>
</CustomField>