unpackaged/main/default/objects/conference360__Event_Item__c/fields/conference360__Waitlist_Enabled__c.field-meta.xml
<CustomField>
    <fullName>conference360__Waitlist_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When waitlisting is enabled, and remaining seats = 0, attendees can still register but will be waitlisted.</inlineHelpText>
    <label>Waitlist Enabled</label>
    <type>Checkbox</type>
</CustomField>