unpackaged/main/default/objects/conference360__Event_Item__c/validationRules/conference360__MaximumQuantityLessThanNull.validationRule-meta.xml
<ValidationRule>
    <fullName>conference360__MaximumQuantityLessThanNull</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(conference360__Type__c, &#39;Main event ticket&#39;), ISPICKVAL(conference360__Type__c, &#39;Guest&#39;)), 0 &gt; conference360__Maximum_Quantity__c)</errorConditionFormula>
    <errorDisplayField>conference360__Maximum_Quantity__c</errorDisplayField>
    <errorMessage>Quantity must be greater or equal to 0.</errorMessage>
</ValidationRule>