unpackaged/main/default/objects/conference360__Event_Item__c/validationRules/conference360__MinimumQuantityMoreThanMaximumQuantity.validationRule-meta.xml
<ValidationRule>
    <fullName>conference360__MinimumQuantityMoreThanMaximumQuantity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(conference360__Type__c, &#39;Main event ticket&#39;), ISPICKVAL(conference360__Type__c, &#39;Guest&#39;)),  conference360__Minimum_Quantity__c &gt;  conference360__Maximum_Quantity__c)</errorConditionFormula>
    <errorDisplayField>conference360__Minimum_Quantity__c</errorDisplayField>
    <errorMessage>Maximum Quantity cannot be lower than Minimum Quantity.</errorMessage>
</ValidationRule>