unpackaged/main/default/objects/conference360__Event_Item__c/validationRules/conference360__SalesStartDateBeforeEventStart.validationRule-meta.xml
<ValidationRule>
    <fullName>conference360__SalesStartDateBeforeEventStart</fullName>
    <active>true</active>
    <description>Validation for Event item Sales Start date/time to make sure it&#39;s before the Event Start date/time</description>
    <errorConditionFormula>conference360__Sales_Start_Date_Time_GMT__c &gt; conference360__Event__r.conference360__Event_Start_Date_Time_GMT__c</errorConditionFormula>
    <errorMessage>The Sales Start Date/Time should be before the Event Start Date</errorMessage>
</ValidationRule>