unpackaged/main/default/objects/conference360__Event_Item__c/validationRules/conference360__ValidateDonationAmounts.validationRule-meta.xml
<ValidationRule>
    <fullName>conference360__ValidateDonationAmounts</fullName>
    <active>true</active>
    <description>Validation for Event item Donation Amounts to make sure it has the correct format.</description>
    <errorConditionFormula>AND(ISPICKVAL(conference360__Type__c , &#39;Donation&#39;),NOT(REGEX(conference360__Donation_Amounts2__c, &#39;^[0-9,]*$&#39;)))</errorConditionFormula>
    <errorMessage>Donation Amounts should contain only numbers separated by commas. Do not include spaces.</errorMessage>
</ValidationRule>